# lxmax

./: CMakeLists.txt  LICENSE  LICENSE.md  ReadMe.md  SetupVSBuild.bat  SetupXCodeBuild.command  appveyor.yml  conanfile.py  package-info.json.in
cmake_modules/: version_info.hpp.in  version_info_macros.hpp.in
docs/: lx.colorfixture.maxref.xml  lx.config.maxref.xml  lx.dimmer.maxref.xml  lxmax.maxref.xml
extras/: LXMax DMX Setup.maxpat
help/: lx.dimmer.maxhelp
media/: cog_button.ai
source/lxmax-lib/: CMakeLists.txt  color_component.hpp  color_personality.cpp  color_personality.hpp  color_processor.cpp  color_processor.hpp  common.hpp  config_helpers.cpp  config_helpers.hpp  dmx_buffer_manager.hpp  dmx_channel_range.hpp  dmx_input_service.cpp  dmx_input_service.hpp  dmx_output_service.cpp  dmx_output_service.hpp  dmx_packet_artnet.hpp  dmx_packet_sacn.hpp  dmx_service.cpp  dmx_service_config.hpp  dmx_universe_config.cpp  dmx_universe_config.hpp  dmx_write_manager.hpp  double_buffer.hpp  endian_helpers.hpp  fixture.cpp  fixture.hpp  fixture_manager.cpp  fixture_manager.hpp  fixture_patch_info.hpp  global_config.hpp  hash_functions.hpp  precision_helpers.hpp  preferences_manager.hpp
source/projects/lx.colorfixture/: CMakeLists.txt  lx.colorfixture.cpp
source/projects/lx.config/: lx.config.cpp
source/projects/lx.dimmer/: CMakeLists.txt  lx.dimmer.cpp
source/projects/lx.dmxwrite/: CMakeLists.txt  lx.dmxwrite.cpp
source/projects/lx.raw.write/: CMakeLists.txt  lx.raw.write.cpp  lx.raw.write.test.cpp
source/projects/lxmax/: CMakeLists.txt  common.hpp  dict_edit.hpp  lx.colorfixture.hpp  lx.config.hpp  lx.dimmer.hpp  lx.raw.write.hpp  lxmax.cpp  lxmax.hpp  lxmax_service.cpp  main.cpp  max_console_channel.hpp  preferences_manager.hpp
source/projects/shared/: common.hpp
